--- a/.config/themes/Hacker/kitty/kitty.conf
+++ b/.config/themes/Hacker/kitty/kitty.conf
@@ -1,5 +1,5 @@
 #*********************************************************************
-#*   Fravelz DotFiles configuration for Hyprland                     *
+#*   Fravelz DotFiles configuration for Sway (Wayland)              *
 #*********************************************************************
 
 #* Fuentes ***********************************************************
@@ -83,4 +83,4 @@ background_opacity 0.95
 
 shell zsh
 
-# Fravelz Hyprdots - Fin del Archivo *********************************
+# Fravelz Swaydots - Fin del Archivo *********************************
