fix: theme windows 10.

--- a/.config/themes/Windows10/sway/theme.conf
+++ b/.config/themes/Windows10/sway/theme.conf
@@ -1,14 +1,19 @@
 # Sway theme: Windows10
 
-set $bg #1e303e
-set $fg #f0f8ff
-set $active #89b4fa
-set $inactive #586377
+set $bg #0e141c
+set $fg #f3f6fb
+set $active #0078d7
+set $inactive #4c5a6a
 
-default_border pixel 2
-default_floating_border pixel 2
-gaps inner 5
-gaps outer 10
+font pango:Noto Sans 10
+
+default_border pixel 1
+default_floating_border pixel 1
+titlebar_padding 8 3
+titlebar_border_thickness 1
+
+gaps inner 0
+gaps outer 0
 
 client.focused          $active   $active   $fg      $active   $active
 client.focused_inactive $inactive $inactive $fg      $inactive $inactive
