delete theme new-mode and fix(windows10): style.

--- a/.config/themes/Windows10/kitty/kitty.conf
+++ b/.config/themes/Windows10/kitty/kitty.conf
@@ -8,7 +8,7 @@ font_family      JetBrainsMono Nerd Font
 bold_font        JetBrainsMono Nerd Font Bold
 italic_font      JetBrainsMono Nerd Font Italic
 bold_italic_font JetBrainsMono Nerd Font Bold Italic
-font_size        18
+font_size        16
 
 #* Permite el uso de emojis ******************************************
 
@@ -58,7 +58,7 @@ cursor #ad8ee6
 
 #background_opacity 1
 #cursor_beam_thickness 1.5
-#window_padding_width 8
+window_padding_width 0
 
 cursor_shape beam
 cursor_beam_thickness 1.8
